# NSIMS

./: Cargo.toml  README.md
examples/: advanced_covariates.ctl  advanced_covariates.json  one_compartment_oral.ctl  one_compartment_oral.json  three_compartment_infusion.ctl  three_compartment_infusion.json  two_compartment_iv_bolus.ctl  two_compartment_iv_bolus.json
results/example1/: concentrations.csv  individual_data.csv  parameters.csv  population_summary.json
src/: config.rs  error.rs  main.rs
src/config/: mod.rs  nonmem.rs
src/dosing/: mod.rs
src/models/: mod.rs  one_compartment.rs  three_compartment.rs  two_compartment.rs
src/output/: mod.rs
src/simulation/: individual.rs  mod.rs  population.rs  variability.rs
