[package]
name = "pk_simulation"
version = "0.1.0"
edition = "2021"
authors = ["PK Simulation Team"]
description = "Population pharmacokinetics simulation program with NONMEM-like algorithms"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"